# oopnew

./: .coverage  .flake8  README.md  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_main_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_test_main_py.html
oop/: .gitignore  pyvenv.cfg
oop/Scripts/: activate  activate.bat  activate.fish
src/: main.py
tests/: test_main.py
