[project]
name = "oopnew"
version = "0.1.0"
description = ""
authors = [
    {name = "Maksim_ka",email = "miheevm332@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
lint = [
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)"
]

[tool.flake8]
line-length = 119


[tool.black]
line-length = 119
exclude = '.git'


[tool.mypy]
disallow_any_unimported = true
warn_return_any = true
exclude = 'venv'